# ft_printf

./: CMakeLists.txt  Makefile  a.out  exe  main.c  printf_main_check.c
exe.dSYM/Contents/Resources/DWARF/: exe
includes/: ft_printf.h
libft/: Makefile  ft_atoi.c  ft_strjoin.c
sources/: Makefile  ft_flist_set.c  ft_init_pf_flist.c  ft_itoabase.c  ft_printf.c  ft_printf.h  ft_strjoinandfree.c  ftpf_undefined.c  pf_c.c  pf_cs.c  pf_f.c  pf_flags.c  pf_idu.c  pf_n_color.c  pf_n_color_quote.c  pf_o.c  pf_ob.c  pf_parse_flags.c  pf_parse_flags_a.c  pf_parse_flags_b.c  pf_parse_flags_c.c  pf_parse_flags_d.c  pf_process_func.c  pf_undefined.c  pf_uni.c  pf_xp.c
